samples/_failures_safe/1761559527_b0cd11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96ed6b59.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_96ed6b59.c:159:17: error: expected declaration or statement at end of input
  159 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_96ed6b59.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96ed6b59.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96ed6b59.c:159:17: error: expected declaration or statement at end of input
